# dshin-shape-cpp

./: .gitignore  CMakeLists.txt  README.md  meshConnComps.mex.cc  mexutil.h
scripts/: build.sh  debug-build.sh
